zg 08.10.2016 13:51:32 +0200 - build 4813

1. 0003324: Find/Replace in editor does not highlight found entries.

drkns 08.10.2016 10:38:23 +0200 - build 4812

1. Обход очередного бага VS.

drkns 08.10.2016 02:27:23 +0200 - build 4811

1. Продолжение 4810.2.

drkns 08.10.2016 01:10:06 +0200 - build 4810

1. Ещё раз о флагах консоли: вместо создания с нуля наследуем существующие и меняем только то, что нам нужно.

2. Рефакторинг.

drkns 06.10.2016 22:59:17 +0200 - build 4809

1. Не сохранялись флаги консоли ENABLE_AUTO_POSITION и ENABLE_INSERT_MODE:
   - окно могло неоптимально позиционироваться при разворачивании;
   - запущенный из фара, например, cmd мог внезапно оказаться в режиме 'overwrite'.

2. Пара мелочей.

zg 06.10.2016 19:59:25 +0200 - build 4808

1. уточнение 4808 для вложенных диалогов.

2. уточнение 4807.

zg 05.10.2016 20:37:13 +0200 - build 4807

1. уточнение 4803 для граббера.

drkns 04.10.2016 09:47:59 +0200 - build 4806

1. Уточнение 4794 & 4805.

drkns 03.10.2016 21:28:23 +0200 - build 4805

1. 0003318: "Message not found" errors when opening F9 > Options > Colors

drkns 02.10.2016 18:45:31 +0200 - build 4804

1. Рефакторинг.

zg 01.10.2016 18:23:05 +0200 - build 4803

1. 0003051: Вызов ECTL_REDRAW из диалога.

drkns 01.10.2016 14:28:21 +0200 - build 4802

1. В некоторых случаях не удалялись временные файлы после просмотра архивов.

drkns 01.10.2016 00:08:29 +0200 - build 4801

1. Уточнение 4800.

drkns 30.09.2016 19:31:55 +0200 - build 4800

1. 0003315: unload:plugin.dll not close panel

drkns 30.09.2016 12:04:12 +0200 - build 4799

1. Уточнение 4798.

drkns 29.09.2016 17:30:16 +0200 - build 4798

1. Не работали модификаторы с mouse wheel.

2. CtrlP/CtrlM теперь не должны конфликтовать со встроенным буфером обмена.

3. Падение при нажатии AltEnd на панели плагина с нестандартными колонками.

4. Рефакторинг.

drkns 25.09.2016 20:32:14 +0200 - build 4797
